--- a/style.css
+++ b/style.css
@@ -62,18 +62,17 @@ img, fieldset {
 
 #footer {
 	padding:50px 20px;
-	color: #fff;
-	background-color: #003456;
+	color: #000;
 }
 
 .footer_container {
-	display: flex;
 	max-width: 1200px;
 	margin: 0 auto;
+	text-align: center;
 }
 .footer_logo img {
 	height: 60px;
-	margin-right: 50px;
+	margin-bottom: 20px;
 }
 .footer_info {
 	line-height: 1.5;
@@ -181,7 +180,7 @@ img, fieldset {
 .main_cover {
 	position: relative;
 	height: 700px;
-	top: 80px;
+	padding-top: 80px;
 	z-index: 0;
 }
 .main_cover img {
@@ -204,7 +203,7 @@ img, fieldset {
 .main_cover .slogan {
 	position: absolute;
 	width: 100%;
-	top: 200px;
+	top: 250px;
 	color: #fff;
 }
 .main_cover .slogan .box {
@@ -224,16 +223,84 @@ img, fieldset {
 }
 .main_cover .slogan .box p {
 	font-size: 1.5em;
-	margin-top: 50px;
+	margin-top: 30px;
 	line-height: 1.5;
 }
 .main_cover .cover {
 	position: absolute;
 }
+.main_cover .paging_box {
+    position: absolute;
+    box-sizing: border-box;
+    right: 50px;
+    bottom: -200px;
+    padding: 30px;
+    width: 160px;
+	height: 100px;
+    font-weight: 800;
+    background-color: #005abc;
+}
+.main_cover .paging_box .current_page {
+	font-size: 2em;
+}
+.main_cover .paging_box .slash {
+	position: absolute;
+    bottom: 25px;
+    font-size: 2.5em;
+    font-weight: 400;
+    padding: 0 10px;
+    opacity: 0.5;
+}
+.main_cover .paging_box .total_page {
+    position: absolute;
+    bottom: 25px;
+    right: 30px;
+    font-size: 1.5em;
+    opacity: 0.5;
+}
+.button {
+	margin-top: 40px;
+}
+.button a {
+    display: block;
+    border: 1px solid #fff;
+	width: 250px;
+    height: 60px;
+    font-size: 1.2em;
+    font-weight: 400;
+    text-align: center;
+	text-decoration: none;
+    line-height: 60px;
+    color: #fff;
+}
+.button a:hover {
+	background-color: #005abc;
+	transition: .3s;
+}
 .slick_main .item {
 	height: 700px;
 	background-size: cover;
 	background-position: center;
+}
+.slick-prev:before, .slick-next:before {
+	font-size: 30px;
+}
+.slick-prev {
+	left: 50px;
+	z-index: 1;
+}
+.slick-next {
+	right: 50px;
+	z-index: 1;
+}
+.slick-dots {
+	bottom: 50px;
+}
+.slick-dots li.slick-active button:before {
+    color: #fff;
+}
+.slick-dots li button:before {
+    color: #fff;
 }
 
 /* content_box */
@@ -252,23 +319,19 @@ img, fieldset {
 	margin-top: 0;
 }
 
-
 .content_box .title {
 	margin: 50px auto;
+	text-align: center;
 }
 .content_box .title h1 {
 	font-size: 3em;
 	font-weight: 800;
-	text-align: center;
 }
-.content_box .title:after {
-	content: '';
-    display: block;
-    width: 100px;
-    height: 10px;
-    background: #003456;
-    transform: skew(-50deg);
-    margin: 20px auto;
+.content_box .title p {
+	font-size: 1.5em;
+	font-weight: 800;
+	color: #005abc;
+	margin-bottom: 10px;
 }
 .content_box .cb1_box {
 	display: flex;
@@ -314,13 +377,17 @@ img, fieldset {
 }
 .content_box .cb2_list li {
 	position: relative;
-	font-size: 1rem;
 	display: inline-block;
+	overflow: hidden;
+	font-size: 1rem;
 	width: 32%;
 	margin-left: 2%;
-	height: 500px;
+	height: 400px;
 	background-size: cover;
 	z-index: 10;
+}
+.content_box .cb2_list li:hover {
+	cursor: pointer;
 }
 .content_box .cb2_list li:first-child {
 	margin-left: 0;
@@ -328,33 +395,42 @@ img, fieldset {
 .content_box .cb2_list li a {
 	height: 100%;
 }
-.content_box .cb2_list li a:hover .text {
-	background-color: #003456;
-	color: #fff;
-	transition: background-color .5s;
+.content_box .cb2_list li:hover .text {
+	bottom: -100px !important;
 }
-.content_box .cb2_list li a:hover .image_cover_dark {
-	opacity: 0.6;
-	transition: opacity .5s;
+.content_box .cb2_list li:hover .image_cover_dark {
+	bottom: 0;
+	/* opacity: 0.6;
+	transition: opacity .5s; */
 }
 .content_box .cb2_list .image_cover_dark {
-	position: absolute;
+	bottom: -400px;
 	width: 100%;
-	height: 100%;
-	background-color: #000;
-	opacity: 0.3;
+	height: 400px;
+	background: rgba(0, 90, 188,.9);
+	position: absolute;
+	transition: all .5s ease;
+
+	color: #fff;
+	display: flex;
+	flex-direction: column;
+    justify-content: center;
+    align-items: center;
+	/* background-color: #000;
+	opacity: 0.2; */
 }
 .content_box .cb2_list .text {
 	width: 100%;
-    height: 110px;
-    background: rgba(255,255,255,.8);
+    height: 100px;
+    background: rgba(0, 90, 188,.9);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     position: absolute;
 	bottom: 0;
-	color: #003456;
+	color: #fff;
+	transition: all .5s ease;
 }
 .content_box .cb2_list .text h1 {
 	font-size: 1.5em;
@@ -366,44 +442,30 @@ img, fieldset {
 
 .content_box .cb3_background {
 	width: 100%;
-	height: 800px;
-	margin-top: -300px;
+	height: 600px;
     left: 0;
     bottom: 0;
-    background: url(images/cb3_img1.jpg) 50% 50% no-repeat;
-    background-size: cover;
+    background: url(images/bg_img1.jpg) 50% 50% no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
 }
 .content_box .cb3_background .image_cover_dark {
 	position: absolute;
 	width: 100%;
-	height:  800px;
-	background-color: #003456;
-	opacity: 0.9;
+	height: 600px;
+	background-color: #000;
+	opacity: 0.5;
 }
 .content_box .cb3_background .cb3_contact {
 	position: relative;
-	padding-top: 400px;
+	padding-top: 80px;
 	font-size: 0;
 }
 .content_box .cb3_background .title {
 	font-size: 1rem;
-	width: 25%;
-	display: inline-block;
-	vertical-align: top;
-	margin: unset;
 	color: #fff;
 }
-.content_box .cb3_background .title:after {
-	background: #fff;
-	margin-left: 30px;
-}
-.content_box .cb3_background .title h1 {
-	text-align: left;
-}
-.content_box .cb3_background ul {
-	display: inline-block;
-	width: 75%;
-}
+
 .content_box .cb3_background ul li {
 	font-size: 1rem;
 	display: inline-block;
@@ -702,19 +764,6 @@ img, fieldset {
 		margin-top: 5px;
 	}
 
-
-	.footer_container {
-		display: block;
-		text-align: center;
-	}
-	.footer_logo {
-		
-	}
-	.footer_logo img {
-		height: 50px;
-		margin-bottom: 20px;
-		margin-right: 0;
-	}
 }
 
 @media screen and (max-width:480px) {
