--- a/style.css
+++ b/style.css
@@ -562,6 +562,12 @@ img, fieldset {
 	html {
 		font-size: 0.8em;
 	}
+	#header {
+		height: 60px;
+	}
+	#header .logo img {
+		height: 40px;
+	}
 	#header .mobile-menu {
 		display: block;
 		position: absolute;
@@ -582,7 +588,7 @@ img, fieldset {
 		width: 25px;
 		height: 2px;
 		margin-left: -12px;
-		background-color: #ccc;
+		background-color: #005abc;
 		-webkit-transition: -webkit-transform .3s;
 		transition: transform .3s;
 	}
@@ -604,17 +610,20 @@ img, fieldset {
 		margin-top: 0;
 		z-index: 610;
 		outline: none;
+		
 	}
 	#header .mobile-menu.on span {
 		display: none;
 	}
 	#header .mobile-menu.on:before {
 		margin-top: -1px;
+		background-color: #fff;
 		-webkit-transform: rotate(45deg);
 		transform: rotate(45deg);
 	}
 	#header .mobile-menu.on:after {
 		margin-top: -1px;
+		background-color: #fff;
 		-webkit-transform: rotate(-45deg);
 		transform: rotate(-45deg);
 	}
@@ -626,8 +635,8 @@ img, fieldset {
 		z-index: 600;
 		width: 300px;
 		height: 100%;
-		padding-top: 68px;
-		background-color: #003456;
+		padding-top: 60px;
+		background-color: #005abc;
 		box-sizing: border-box;
 		-webkit-transition: right .3s;
 		transition: right .3s;
@@ -645,12 +654,13 @@ img, fieldset {
 	#gnb .main_ul > li > a {
 		padding: 20px 20px 15px;
 		text-align: left;
+		color: #fff;
 	}
 	#gnb .sub_ul > li > a {
 		text-align: left;
 		padding: 15px 20px 15px 40px;
 		text-decoration: none;
-		color: #ccc;
+		color: #fff;
 		letter-spacing: 2px;
 	}
 	#gnb .sub_ul {
@@ -668,25 +678,57 @@ img, fieldset {
 	}
 
 	.main_cover {
-		height: 800px;
+		padding-top: 60px;
+		height: 500px;
+	}
+	.slick_main .item {
+		height: 500px;
 	}
 	.main_cover .slogan {
-		top: 260px;
+		top: 130px;
+		text-align: center;
+	}
+	.main_cover .slogan .button {
+		/* margin-top: 40px; */
+		margin: 40px auto;
+		display: inline-block;
+	}
+	.main_cover .slogan .paging_box {
+		display: none;
+	}
+	.content_box .cb1_img {
+		height: 350px;
+	}
+	.content_box .cb1_text {
+		padding: 20px 0 0 20px;
+	}
+	.content_box .cb1_img .square1 {
+		height: 175px;
+	}
+	.content_box .cb1_img .square2 {
+		height: 40px;
+		width: 600px;
+		bottom: -40px;
+	}
+	.content_box .cb1_img .square3 {
+		height: 175px;
+		width: 30px;
+		right: -15px;
+		top: 90px;
 	}
 	.content_box .cb2_list li {
 		height: 350px;
 	}
+	.content_box .cb2_list .image_cover_dark {
+		height: 350px;
+	}
+
 	.content_box .cb3_background,
 	.content_box .cb3_background .image_cover_dark {
-		height: 600px;
+		height: 500px;
 	}
 	.content_box .cb3_background .cb3_contact {
-		position: relative;
-		padding-top: 350px;
-		font-size: 0;
-	}
-	.content_box .cb3_background .title:after {
-		margin-left: 15px;
+		padding-top: 40px;
 	}
 }
 
@@ -711,21 +753,9 @@ img, fieldset {
 	.main_cover .slogan .box p {
 		margin-top: 30px;
 		line-height: 1.5;
+		font-size: 1.3em;
 	}
-	.main_cover:after {
-		content: '';
-		position: absolute;
-		width: 100%;
-		height: 50px;
-		left: 50%;
-		bottom: -32px;
-		z-index: 0;
-		background-color: #fff;
-		backface-visibility: hidden;
-		border: 0 solid transparent;
-		border-width: 1px 0;
-		transform: translate(-50%, 0) skewY(-3deg);
-	}
+
 	.content_box .title {
 		margin: 20px auto;
 	}
@@ -737,14 +767,19 @@ img, fieldset {
 		height: unset;
 		background: none;
 	}
+	.content_box .cb1_img .square3,
+	.content_box .cb1_img .square2,
+	.content_box .cb1_img .square1 {
+		display: none;
+	}
 	.content_box .cb1_text {
 		width: 100%;
-		padding: 80px 0 0;
+		padding: unset;
 		line-height: 1.5;
 		text-align: center;
 	}
 	.content_box .cb1_text h1 {
-		font-size: 2em;
+		font-size: 1.8em;
 	}
 	.content_box .cb1_text p {
 		margin-top: 20px;
@@ -758,25 +793,11 @@ img, fieldset {
 	.content_box .cb2_list .text {
 		height: 100px;
 	}
-	.content_box .cb3_background,
-	.content_box .cb3_background .image_cover_dark {
-		height: 720px;
-	}
-	.content_box .cb3_background .cb3_contact {
-		position: relative;
-		padding-top: 300px;
-	}
 	.content_box .cb3_background .title {
 		width: 100%;
 		display: inline-block;
 		vertical-align: top;
-		margin: unset;
 		color: #fff;
-	}
-	.content_box .cb3_background .title:after {
-		margin-left: auto;
-		margin: 20px auto;
-
 	}
 	.content_box .cb3_background .title h1 {
 		text-align: center;
